# dotfiles

./: .env.sample  .gitignore  .rc.conf_2  .tmux.conf  .zshrc  README.md  README_ES.md  aliasrc  bashrc  bspwm.md  config  init.vim  install  install.conf.yaml  install.config.yaml  install.sh  install_config.yml  install_libraries.sh  p10k.zsh  rc.conf  vimrc  zshrc
.config/alacritty/: alacritty.yml
.config/bspwm/: bspwm_resize  bspwmrc
.config/nvim/: .ideavimrc  .netrwhist  README.md  generate.vim.bak  html.snippets  index.html  init.vim  init.vim.bak.bak  python.snippets
.config/polybar/: config
.config/qtile/: README.md  config.py
.config/sxhkd/: sxhkdrc
.config/tmux/: .tmux.conf
config/: Xresources  install
config/alacritty/: alacritty.yml
config/bash/: .aliasrc  aliasrc  bashrc  profile
config/fzf/: fzf.bash  fzf.zsh
config/git/: gitconfig
config/lsd/: config.yaml
config/nvim/: init.vim
config/popos/: popos_gnome.conf
config/powerlevel10k/: p10k.zsh
config/pycharms/: .ideavimrc
config/qtile/: README.md  autostart.sh  config.py
config/rofi/: config.rasi  onedark.rasi
config/ssh/: config
config/terminator/: config
config/vim/: vimrc
config/zsh/: .aliasrc  aliasrc  zshrc
devhints/: README.md  main.py  pyproject.toml  vim_cheatsheet.py
devhints/cheatsheets/: vim.py
devhints/devhints/: main.py  settings.py
devhints/devhints/cheatsheets/: docker.py  git.py  nmcli.md  vim.py
i3/: config
nvim/: init.vim
nvim/general/: settings.vim
nvim/keys/: mappings.vim
nvim/vim-plug/: plugins.vim
polybar/: config  launch.sh
(+16 files in other folders)
